--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,25 @@
 version: '3.9'
 
 services:
- minio-server:
-  image: minio/minio
-  restart: always
-  volumes:
-   - ./minio:/data
-  ports:
-   - "9000:9000"
-   - "46203:46203"
-  environment:
-   MINIO_ACCESS_KEY: 123123123
-   MINIO_SECRET_KEY: 123123123
-  command: server /data --console-address :46203
+  minio-server:
+    image: minio/minio
+    restart: always
+    volumes:
+      - /tmp/minio:/data
+    ports:
+      - "9000:9000"
+      - "46203:46203"
+    environment:
+      MINIO_ACCESS_KEY: 123123123
+      MINIO_SECRET_KEY: 123123123
+    command: server /data --console-address :46203
+  db:
+    image: postgres:12
+    ports:
+      - 5432:5432
+    volumes:
+      - /tmp/postgres/db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=users
+      - POSTGRES_USER=dakz
+      - POSTGRES_PASSWORD=123321
