--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 Django==4.1.4
 idna==3.4
+minio==7.1.12
+psycopg2==2.9.5
 requests==2.28.1
 sqlparse==0.4.3
 urllib3==1.26.13
